# Megatron-LM

./: .gitignore  pretrain_gpt.py  pyproject.toml  setup.py
ckpt/: .metadata  __0_0.distcp  __0_1.distcp
examples/: run_simple_mcore_train_loop.py
examples/academic_paper_scripts/detxoify_lm/: generate-1.3b.sh
examples/emu3/: readme.md  test.ipynb  test_emu3_8b_model.sh  train_emu3_8b_distributed.sh
examples/emu3/tests/: compare_numerical_accuracy.ipynb  generate_test_data.ipynb  generate_test_data.sh  test.ipynb  test_datasets.py  test_model_forward.py  test_te.py  test_tokenizer.py  utils.py
examples/multimodal/: layer_specs.py
megatron/core/datasets/: blended_dataset.py  blended_megatron_dataset_builder.py  blended_megatron_dataset_config.py  emu3_mm_dataset.py  gpt_dataset.py  indexed_dataset.py  utils.py
megatron/core/extensions/: transformer_engine.py
megatron/core/models/gpt/: gpt_layer_specs.py
megatron/core/transformer/: attention.py  transformer_config.py
megatron/training/: arguments.py  global_vars.py  initialize.py  utils.py  yaml_arguments.py
megatron/training/tokenizer/: tokenizer.py
tools/: preprocess_data.py
tools/checkpoint/: convert.py  loader_emu3.py  saver_mcore.py  saver_megatron.py  schema_base.py  schema_mcore.py
