# Copyright (c) 2023, NVIDIA CORPORATION.  All rights reserved.

[build-system]
requires = [
    "setuptools",
    "pybind11",
]

[project]
name = "megatron-core"
dynamic = ["dependencies", "version"]
description = "Megatron Core - a library for efficient and scalable training of transformer based models"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "NVIDIA", email = "nemo-toolkit@nvidia.com" }]
maintainers = [{ name = "NVIDIA", email = "nemo-toolkit@nvidia.com" }]
keywords = [
    "NLP",
    "NLU",
    "deep",
    "gpu",
    "language",
    "learning",
    "learning",
    "machine",
    "nvidia",
    "pytorch",
    "torch",
    "transformer",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.urls]
Download = "https://github.com/NVIDIA/Megatron-LM/releases"
Homepage = "https://github.com/NVIDIA/Megatron-LM/megatron/core"

[tool.isort]
profile = "black"  # black-compatible
line_length = 100  # should match black parameters
py_version = 310  # python 3.8 as a target version
known_first_party = ["megatron"]  # FIRSTPARTY section
known_third_party = ["transformer_engine"]  # THIRDPARTY section
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
extend_skip = ["setup.py"]

[tool.black]
line_length = 100
skip_string_normalization = true
# recongized by future versions, disallows to reformat code with incompatible versions
# Matches NeMO version so people working on both codebases don't need two different version of black installed
required_version = "24"  
skip_magic_trailing_comma = true
[tool.pixi.project]
channels = ["/root/.cache/prefix", "https://meta-forge.cn-gd.ufileos.com", "nvidia/label/cuda-12.4.0", "nvidia", "pytorch", "https://fast.prefix.dev/conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
#megatron-core = { path = ".", editable = true }

[tool.pixi.tasks]
hello_world = "rm -rf ./ckpt && torchrun --nproc-per-node 1 examples/run_simple_mcore_train_loop.py"


[tool.pixi.dependencies]
pybind11 = ">=2.13.6,<3"
gxx = ">=14.2.0,<15"
make = ">=4.4.1,<5"
apex = ">=4.4.1,<5"
six = ">=1.16.0,<2"
regex = ">=2024.9.11,<2025"
setuptools = ">=75.1.0,<76"
psutil = ">=6.0.0,<7"
transformer-engine = ">=1.12,<2"
cudnn = {version = ">=9.3.0.75,<10.0a0", channel="https://fast.prefix.dev/conda-forge"}
pip = ">=24.3.1,<25"
ipykernel = ">=6.29.5,<7"
transformers = ">=4.46.3,<5"
tensorboard = ">=2.18.0,<3"
accelerate = ">=1.1.1,<2"
tiktoken = ">=0.8.0,<0.9"
pytest = ">=8.3.4,<9"
